# url-shortener

./: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  docker-compose.prod.yaml  docker-compose.yaml
migrations/pg/: 20250726192431_user.sql  20250726204321_user_password.sql  20250727001729_role_user.sql
src/: main.rs
src/app/: config.rs  handlers.rs  mod.rs  repositories.rs  services.rs
src/config/prod/: config.toml  prometheus.yml
src/domain/: url.rs
src/feature/auth/: entity.rs  handler.rs  jwt.rs  mod.rs  password.rs  repository.rs  service.rs
src/feature/url/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs
src/metrics/: middleware.rs  mod.rs  prometheus_metrics.rs
src/migrations/pg/: 20250716143957_new_migration.sql
src/servers/http/: middleware.rs  server.rs
src/swagger/: mod.rs  swagger_api.rs
src/utils/: constants.rs  db.rs  mod.rs  random.rs  url.rs
