[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
mimalloc = { version = "0.1.46" }
tower-http = { version = "0.6.6", features = ["cors", "compression-full"] }
axum = { version = "0.8.4" }
humantime = "2.1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
mockall = "0.13.1"
sea-query = { version = "0.32.6" }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
rand = { version = "0.8.5" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.17.0", features = ["macros"] }
url = "2.5.4"
anyhow = "1.0.98"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
argon2 = { version = "0.5.3" }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
cookie = "0.18.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
prometheus = { version = "0.14.0", features = ["process"] }
tower = "0.5.2"


[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = { version = "0.5.4" }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
debug = 2
lto = "fat"
codegen-units = 1
strip = true
